MYFACES-2378 Use java util logging on 2.0.x branch
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@824859 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -342,11 +342,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
+        <!-- dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.1.1</version>
-        </dependency>
+        </dependency -->
         <dependency>
             <groupId>org.apache.myfaces.buildtools</groupId>
             <artifactId>myfaces-builder-annotations</artifactId>
