--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -174,6 +174,76 @@
         </executions>
       </plugin>
                -->
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <archive>  
+            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+          </archive>
+       </configuration>
+      </plugin>
+      <plugin>   
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>bundle-manifest</id>
+            <phase>process-classes</phase>
+            <goals>    
+              <goal>manifest</goal>
+            </goals>
+            <configuration>
+              <instructions>
+                <Bundle-SymbolicName>org.apache.myfaces.core.impl</Bundle-SymbolicName>
+                <Bundle-Classpath>.</Bundle-Classpath>
+                <Build-Jdk>${java.version}</Build-Jdk>
+                <Implementation-Title>${project.name}</Implementation-Title>
+                <Implementation-Version>${project.version}</Implementation-Version>
+                <Implementation-Vendor>The Apache Software Foundation</Implementation-Vendor>
+                <Implementation-Vendor-Id>${project.groupId}</Implementation-Vendor-Id>
+                <Export-Package>
+                  *;version="${project.version}"
+                </Export-Package>
+                <Import-Package>
+                  !org.apache.myfaces.*,
+                  com.google.inject;version="[1.0.0, 2.0.0)";resolution:=optional,
+                  javax.annotation,
+                  javax.crypto,
+                  javax.crypto.spec,
+                  javax.ejb;resolution:=optional,
+                  javax.el,
+                  javax.naming,
+                  javax.persistence;version="[1.0.0, 2.0.0)";resolution:=optional,
+                  javax.portlet;version="[1.0.0, 2.0.0)";resolution:=optional,
+                  javax.servlet;version="[2.5.0, 3.0.0)",
+                  javax.servlet.http;version="[2.5.0, 3.0.0)",
+                  javax.servlet.jsp;version="[2.1.0, 3.0.0)",
+                  javax.servlet.jsp.jstl.core;version="[1.1.2, 2.0.0)",
+                  javax.servlet.jsp.tagext;version="[2.1.0, 3.0.0)",
+                  javax.xml.parsers,
+                  org.apache;resolution:=optional,
+                  org.apache.commons.beanutils;version="[1.7.0, 2.0.0)",
+                  org.apache.commons.codec.binary;version="[1.3.0, 2.0.0)",
+                  org.apache.commons.collections.map;version="[3.2.0, 4.0.0)",
+                  org.apache.commons.digester;version="[1.8.0, 2.0.0)",
+                  org.apache.commons.discovery;version="[0.4.0, 1.0.0)",
+                  org.apache.commons.discovery.resource;version="[0.4.0, 1.0.0)",
+                  org.apache.commons.discovery.resource.names;version="[0.4.0, 1.0.0)",
+                  org.apache.commons.discovery.tools;version="[0.4.0, 1.0.0)",
+                  org.apache.commons.logging;version="[1.1.1, 2.0.0)",
+                  org.w3c.dom,
+                  org.xml.sax,
+                  org.xml.sax.helpers,
+                  org.apache.jasper.compiler;resolution:=optional,
+                  javax.faces.*;version="${project.version}",
+                  *
+                </Import-Package>
+              </instructions>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
   <profiles>
