MYFACES-2290 Add OSGi bundle information and bundle classloader / activator
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x@832537 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -212,7 +212,7 @@
                   javax.crypto,
                   javax.crypto.spec,
                   javax.ejb;resolution:=optional,
-                  javax.el,
+                  javax.el;version="[1.0.0, 3.0.0)",
                   javax.naming,
                   javax.persistence;version="[1.0.0, 2.0.0)";resolution:=optional,
                   javax.portlet;version="[1.0.0, 2.0.0)";resolution:=optional,
