--- a/api/pom.xml
+++ b/api/pom.xml
@@ -281,13 +281,13 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>clirr-maven-plugin</artifactId>
-                        <version>2.1.1</version>
+                        <version>2.2.2</version>
                         <configuration>
                             <comparisonArtifacts>
                                 <comparisonArtifact>
-                                    <groupId>javax.faces</groupId>
+                                    <groupId>com.sun.faces</groupId>
                                     <artifactId>jsf-api</artifactId>
-                                    <version>1.2_03</version>
+                                    <version>2.0.1</version>
                                 </comparisonArtifact>
                             </comparisonArtifacts>
                         </configuration>
