update myfaces builder plugin and annotations version to 1.0.4
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x@881094 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -629,7 +629,7 @@
     <dependency>
       <groupId>org.apache.myfaces.buildtools</groupId>
       <artifactId>myfaces-builder-annotations</artifactId> 
-      <version>1.0.4-SNAPSHOT</version>
+      <version>1.0.4</version>
       <scope>provided</scope>
     </dependency>
     
@@ -762,6 +762,6 @@
 
   <properties>
     <myfaces-shared.version>3.0.7-SNAPSHOT</myfaces-shared.version>
-    <myfaces-builder-plugin.version>1.0.4-SNAPSHOT</myfaces-builder-plugin.version>
+    <myfaces-builder-plugin.version>1.0.4</myfaces-builder-plugin.version>
   </properties>
 </project>
