--- a/api/pom.xml
+++ b/api/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>1.2.8-SNAPSHOT</version>
+    <version>1.2.8</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -13,9 +13,9 @@
   </description>
   <url>http://myfaces.apache.org/core12/myfaces-api</url>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x/api</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x/api</developerConnection>
-    <url>http://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x/api</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/tags/1_2_8/api</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/tags/1_2_8/api</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/tags/1_2_8/api</url>
   </scm>
   <build>
     <plugins>
