--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>1.2.8-SNAPSHOT</version>
+    <version>1.2.9-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -761,7 +761,7 @@
   </repositories>
 
   <properties>
-    <myfaces-shared.version>3.0.7-SNAPSHOT</myfaces-shared.version>
+    <myfaces-shared.version>3.0.7</myfaces-shared.version>
     <myfaces-builder-plugin.version>1.0.4</myfaces-builder-plugin.version>
   </properties>
 </project>
