--- a/api/pom.xml
+++ b/api/pom.xml
@@ -179,7 +179,7 @@
             <plugin>
                 <groupId>org.apache.myfaces.buildtools</groupId>
                 <artifactId>myfaces-builder-plugin</artifactId>
-                <version>1.0.4-SNAPSHOT</version>
+                <version>1.0.4</version>
                 <executions>
                     <execution>
                         <goals>
@@ -393,7 +393,7 @@
         <dependency>
             <groupId>org.apache.myfaces.buildtools</groupId>
             <artifactId>myfaces-builder-annotations</artifactId>
-            <version>1.0.4-SNAPSHOT</version>
+            <version>1.0.4</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
