--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-alpha</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -840,7 +840,7 @@
     <dependency>
       <groupId>org.apache.myfaces.test</groupId>
       <artifactId>myfaces-test20</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-alpha</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -951,7 +951,7 @@
   </repositories>
 
   <properties>
-    <myfaces-shared.version>4.0.1-SNAPSHOT</myfaces-shared.version>
+    <myfaces-shared.version>4.0.1-alpha</myfaces-shared.version>
     <myfaces-builder-plugin.version>1.0.4</myfaces-builder-plugin.version>
   </properties>
 </project>
