updating shared version
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x@886882 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -761,7 +761,7 @@
   </repositories>
 
   <properties>
-    <myfaces-shared.version>3.0.7</myfaces-shared.version>
+    <myfaces-shared.version>3.0.8-SNAPSHOT</myfaces-shared.version>
     <myfaces-builder-plugin.version>1.0.4</myfaces-builder-plugin.version>
   </properties>
 </project>
