--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -543,7 +543,7 @@
   </reporting>
 
   <properties>
-    <myfaces-shared.version>2.0.10</myfaces-shared.version>
+    <myfaces-shared.version>2.0.11-SNAPSHOT</myfaces-shared.version>
   </properties>
 
 </project>
