--- a/api/pom.xml
+++ b/api/pom.xml
@@ -179,7 +179,7 @@
             <plugin>
                 <groupId>org.apache.myfaces.buildtools</groupId>
                 <artifactId>myfaces-builder-plugin</artifactId>
-                <version>1.0.4</version>
+                <version>1.0.5-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <goals>
