MYFACES-2498 - add bean validation api dependency to tolerate runtime with api but not impl.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@901372 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -822,7 +822,12 @@
       <version>1.0.4</version>
       <scope>provided</scope>
     </dependency>
-
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.CR3</version>
+            <scope>provided</scope>
+        </dependency>
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
@@ -861,6 +866,7 @@
       <version>2.3</version>
       <scope>test</scope>
     </dependency>
+    
     <dependency>
       <groupId>com.google.code.guice</groupId>
       <artifactId>guice</artifactId>
