--- a/api/pom.xml
+++ b/api/pom.xml
@@ -179,7 +179,7 @@
             <plugin>
                 <groupId>org.apache.myfaces.buildtools</groupId>
                 <artifactId>myfaces-builder-plugin</artifactId>
-                <version>1.0.5-SNAPSHOT</version>
+                <version>1.0.5</version>
                 <executions>
                     <execution>
                         <goals>
@@ -412,7 +412,7 @@
         <dependency>
             <groupId>org.apache.myfaces.test</groupId>
             <artifactId>myfaces-test20</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0-alpha</version>
             <scope>test</scope>
         </dependency>
         <dependency>
