--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -845,7 +845,7 @@
     <dependency>
       <groupId>org.apache.myfaces.test</groupId>
       <artifactId>myfaces-test20</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-alpha</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -958,6 +958,6 @@
 
   <properties>
     <myfaces-shared.version>4.0.1-SNAPSHOT</myfaces-shared.version>
-    <myfaces-builder-plugin.version>1.0.5-SNAPSHOT</myfaces-builder-plugin.version>
+    <myfaces-builder-plugin.version>1.0.5</myfaces-builder-plugin.version>
   </properties>
 </project>
