update shared snapshot version to beta
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0_betaprepare@901994 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -957,7 +957,7 @@
   </repositories>
 
   <properties>
-    <myfaces-shared.version>4.0.1-SNAPSHOT</myfaces-shared.version>
+    <myfaces-shared.version>4.0.1-beta</myfaces-shared.version>
     <myfaces-builder-plugin.version>1.0.5</myfaces-builder-plugin.version>
   </properties>
 </project>
