--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-beta</version>
   </parent>
 
   <scm>
