--- a/api/pom.xml
+++ b/api/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.apache.myfaces.core</groupId>
         <artifactId>myfaces-core-project</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0-beta-2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.myfaces.core</groupId>
@@ -14,9 +14,9 @@
     </description>
     <url>http://myfaces.apache.org/core20/myfaces-api</url>
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/api</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/api</developerConnection>
-        <url>http://svn.apache.org/repos/asf/myfaces/core/trunk/api</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0_beta_2/api</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0_beta_2/api</developerConnection>
+        <url>http://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0_beta_2/api</url>
     </scm>
     <build>
 
@@ -351,7 +351,7 @@
        <dependency>
           <groupId>org.apache.myfaces.core</groupId>
           <artifactId>myfaces-build</artifactId>
-          <version>2.0.0-SNAPSHOT</version>
+          <version>2.0.0-beta-2</version>
           <scope>provided</scope>
        </dependency> -->
 
@@ -412,7 +412,7 @@
         <dependency>
             <groupId>org.apache.myfaces.test</groupId>
             <artifactId>myfaces-test20</artifactId>
-            <version>1.0.0-alpha</version>
+            <version>1.0.0-beta</version>
             <scope>test</scope>
         </dependency>
         <dependency>
