--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -11,13 +11,13 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-beta-2</version>
   </parent>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/assembly</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/assembly</developerConnection>
-    <url>http://svn.apache.org/repos/asf/myfaces/core/trunk/assembly</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0_beta_2/assembly</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0_beta_2/assembly</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0_beta_2/assembly</url>
   </scm>
 
   <build>
