--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-beta-2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -14,9 +14,9 @@
   </description>
   <url>http://myfaces.apache.org/core20/myfaces-impl</url>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/impl</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/impl</developerConnection>
-    <url>http://svn.apache.org/repos/asf/myfaces/core/trunk/impl</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0_beta_2/impl</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0_beta_2/impl</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0_beta_2/impl</url>
   </scm>
   <build>
     <resources>
@@ -845,7 +845,7 @@
     <dependency>
       <groupId>org.apache.myfaces.test</groupId>
       <artifactId>myfaces-test20</artifactId>
-      <version>1.0.0-alpha</version>
+      <version>1.0.0-beta</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -957,7 +957,7 @@
   </repositories>
 
   <properties>
-    <myfaces-shared.version>4.0.1-SNAPSHOT</myfaces-shared.version>
+    <myfaces-shared.version>4.0.1-beta-2</myfaces-shared.version>
     <myfaces-builder-plugin.version>1.0.5</myfaces-builder-plugin.version>
   </properties>
 </project>
