MYFACES-2565 - BeanValidator throws Exception if external ExpressionLanguageFactory is being used Also small code cleanup in POM (el and validation dependencies) Code cleanup of RegexValidator Code cleanup of BeanValidator
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@916997 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -443,8 +443,10 @@
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
-            <version>1.0.CR3</version>
-            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>el-api</artifactId>
         </dependency>
     </dependencies>
 
