MYFACES-2579 Support the dynamic adding of servlets and servlet-mappings on Servlet API 3.0 to make web.xml entries for Faces Servlet not mandatory
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@920454 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
   <modules>
     <!-- module>build</module -->
     <module>api</module>
+    <module>implee6</module>
     <module>impl</module>
   </modules>
   <repositories>
