--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -933,7 +933,7 @@
     <dependency>
       <groupId>org.apache.myfaces.test</groupId>
       <artifactId>myfaces-test20</artifactId>
-      <version>1.0.0-alpha</version>
+      <version>1.0.0-beta</version>
       <scope>test</scope>
     </dependency>
     <dependency>
