MYFACES-2290 Add OSGi bundle information and bundle classloader / activator (trying to be nice with OSGi)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x@924403 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -242,6 +242,8 @@
                   org.xml.sax,
                   org.xml.sax.helpers,
                   org.apache.jasper.compiler;resolution:=optional,
+                  org.apache.jasper.el;resolution:=optional,
+                  org.apache.el;resolution:=optional,
                   javax.faces.*;version="${project.version}",
                   *
                 </Import-Package>
