--- a/api/pom.xml
+++ b/api/pom.xml
@@ -130,6 +130,7 @@
                   org.apache.commons.logging;version="[1.1.1, 2.0.0)",
                   javax.faces.*;version="${project.version}"
                 </Import-Package>
+                <Require-Bundle>org.apache.myfaces.core.impl</Require-Bundle>
               </instructions>
             </configuration>
           </execution>
