MYFACES-2290 Add OSGi bundle information and bundle classloader / activator (add bundle-version to Require-Bundle of myfaces-api manifest)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1.2.x@924405 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -130,7 +130,7 @@
                   org.apache.commons.logging;version="[1.1.1, 2.0.0)",
                   javax.faces.*;version="${project.version}"
                 </Import-Package>
-                <Require-Bundle>org.apache.myfaces.core.impl</Require-Bundle>
+                <Require-Bundle>org.apache.myfaces.core.impl;bundle-version="${project.version}"</Require-Bundle>
               </instructions>
             </configuration>
           </execution>
