--- a/api/pom.xml
+++ b/api/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.apache.myfaces.core</groupId>
         <artifactId>myfaces-core-project</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0-beta-3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.myfaces.core</groupId>
@@ -352,7 +352,7 @@
        <dependency>
           <groupId>org.apache.myfaces.core</groupId>
           <artifactId>myfaces-build</artifactId>
-          <version>2.0.0-SNAPSHOT</version>
+          <version>2.0.0-beta-3</version>
           <scope>provided</scope>
        </dependency> -->
 
@@ -413,7 +413,7 @@
         <dependency>
             <groupId>org.apache.myfaces.test</groupId>
             <artifactId>myfaces-test20</artifactId>
-            <version>1.0.0-beta</version>
+            <version>1.0.0-beta-2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
