--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     This project is the home of the MyFaces implementation of the JavaServer Faces 2.0 specification, and
     consists of an API module (javax.faces.* classes) and an implementation module (org.apache.myfaces.* classes).
   </description>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0-beta-3</version>
   <url>http://myfaces.apache.org/core20</url>
   <issueManagement>
     <system>jira</system>
