--- a/api/pom.xml
+++ b/api/pom.xml
@@ -357,6 +357,12 @@
        </dependency> -->
 
         <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>el-api</artifactId>
+            <version>2.2</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>de.berlios.jsunit</groupId>
             <artifactId>jsunit-maven2-plugin</artifactId>
             <version>1.3</version>
@@ -443,13 +449,7 @@
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
-            <scope>provided</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>javax.el</groupId>
-            <artifactId>el-api</artifactId>
-            <scope>provided</scope>
+            <version>1.0.CR3</version>
             <optional>true</optional>
         </dependency>
     </dependencies>
