--- a/api/pom.xml
+++ b/api/pom.xml
@@ -357,6 +357,7 @@
        </dependency> -->
 
         <dependency>
+            <!-- el-api 2.1 is included in jsp-api, so this one has to be on top of it -->
             <groupId>javax.el</groupId>
             <artifactId>el-api</artifactId>
             <version>2.2</version>
