--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -826,6 +826,13 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <!-- el-api 2.1 is included in jsp-api, so this one has to be on top of it -->
+      <groupId>javax.el</groupId>
+      <artifactId>el-api</artifactId>
+      <version>2.2</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
       <!-- version defined in parent -->
@@ -910,12 +917,12 @@
       <version>1.0.4</version>
       <scope>provided</scope>
     </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>1.0.CR3</version>
-            <scope>provided</scope>
-        </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>1.0.CR3</version>
+      <optional>true</optional>
+    </dependency>
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
