--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,18 @@
           <artifactId>cobertura-maven-plugin</artifactId>
           <version>2.2</version>
         </plugin>
+        <plugin>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>2.0-beta-6</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.3.1</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-surefire-report-plugin</artifactId>
+          <version>2.3.1</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
