the url of this module should not be the same as impl
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@932160 13f79535-47bb-0310-9956-ffa450edef68

--- a/implee6/pom.xml
+++ b/implee6/pom.xml
@@ -13,7 +13,7 @@
   <description>
     The private implementation classes of the Apache MyFaces Core JSF-2.0 Implementation which require Java EE 6
   </description>
-  <url>http://myfaces.apache.org/core20/myfaces-impl</url>
+  <url>http://myfaces.apache.org/core20/myfaces-implee6</url>
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/implee6</connection>
     <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/implee6</developerConnection>
