MYFACES-2653 Fix implee6 include on code and clean myfaces impl pom.xml (add facelets tlddoc to assembly)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@932247 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -48,15 +48,6 @@
                   <version>${project.version}</version>
                   <classifier>javadoc</classifier>
                 </artifactItem>
-                <!--
-                TODO/CHECK: o.a.m.shared_impl.* javadoc automatically included?
-                <artifactItem>
-                  <groupId>org.apache.myfaces.shared</groupId>
-                  <artifactId>myfaces-shared-impl</artifactId>
-                  <version>1.1.2-SNAPSHOT</version>
-                  <classifier>javadoc</classifier>
-                </artifactItem>
-                -->
               </artifactItems>
               <outputDirectory>${project.build.directory}/javadoc</outputDirectory>
             </configuration>
@@ -75,6 +66,12 @@
                   <artifactId>myfaces-impl</artifactId>
                   <version>${project.version}</version>
                   <classifier>tlddoc</classifier>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>org.apache.myfaces.core</groupId>
+                  <artifactId>myfaces-impl</artifactId>
+                  <version>${project.version}</version>
+                  <classifier>facelets-tlddoc</classifier>
                 </artifactItem>
 
                </artifactItems>
