update versions and copy jsf.js to remove dependency to javascript plugin (timestamped snapshot make release plugin fails)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0prepare@933835 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -916,7 +916,7 @@
     <dependency>
       <groupId>org.apache.myfaces.test</groupId>
       <artifactId>myfaces-test20</artifactId>
-      <version>1.0.0-beta</version>
+      <version>1.0.0-beta-3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -1031,7 +1031,7 @@
   </repositories>
 
   <properties>
-    <myfaces-shared.version>4.0.1-SNAPSHOT</myfaces-shared.version>
+    <myfaces-shared.version>4.0.1</myfaces-shared.version>
     <myfaces-builder-plugin.version>1.0.5</myfaces-builder-plugin.version>
   </properties>
 </project>
