--- a/api/pom.xml
+++ b/api/pom.xml
@@ -27,11 +27,12 @@
            please do not delete this it is just disabled for now
            -->
 
-
+<!--
             <plugin>
                 <artifactId>javascript-maven-plugin</artifactId>
-                <groupId>org.codehaus.mojo.javascript</groupId>
+                <groupId>org.codehaus.mojo.javascript</groupId> -->
                 <!-- we have to enforce a version for now which works due to the alpha stage of the plugin -->
+                <!--
                 <version>1.0-alpha-1-20090530.211438-7</version>
                 <extensions>true</extensions>
                 <executions>
@@ -64,6 +65,7 @@
                     <outputDirectory>${basedir}/target/classes/META-INF/resources/javax.faces/</outputDirectory>
                 </configuration>
             </plugin>
+            -->
         
 
             <plugin>
@@ -107,24 +109,28 @@
                 but for the core apis this should be sufficient
                 
             -->
+            <!--
             <plugin>
                 <groupId>de.berlios.jsunit</groupId>
                 <artifactId>jsunit-maven2-plugin</artifactId>
-                <executions>
+                <executions> -->
                     <!--execution>
                         <id>test</id>
                         <goals>
                             <goal>jsunit-test</goal>
                         </goals>
                     </execution-->
+                    <!--
                 </executions>
                 <configuration>
                     <sourceDirectory>src/main/javascript/META-INF/resources</sourceDirectory>
                     <sources>
                         <source>../../../../test/javascript/org/apache/myfaces/mockups/BrowserMockups.js</source>
+                        -->
                         <!--
                         <source>javax/faces/_util/OpenAjax.js</source>
                         -->
+                        <!--
                         <source>javax/faces/_util/_JSF2Utils.js</source>
                         <source>javax/faces/ajax/Ajax.js</source>
                         <source>../../../../test/javascript/org/apache/myfaces/test/_TestScenario.js</source>
@@ -145,7 +151,7 @@
                         </testSuite>
                     </testSuites>
                 </configuration>
-            </plugin>
+            </plugin>-->
 
             <!--
            <plugin>
@@ -421,7 +427,7 @@
         <dependency>
             <groupId>org.apache.myfaces.test</groupId>
             <artifactId>myfaces-test20</artifactId>
-            <version>1.0.0-beta</version>
+            <version>1.0.0-beta-3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
