update version to release one
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0prepare@933838 13f79535-47bb-0310-9956-ffa450edef68

--- a/implee6/pom.xml
+++ b/implee6/pom.xml
@@ -59,7 +59,7 @@
   </dependencies>
   
   <properties>
-    <myfaces-shared.version>4.0.1-SNAPSHOT</myfaces-shared.version>
+    <myfaces-shared.version>4.0.1</myfaces-shared.version>
   </properties>
   
 </project>
