--- a/api/pom.xml
+++ b/api/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns = "http://maven.apache.org/POM/4.0.0" xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <groupId>org.apache.myfaces.core</groupId>
         <artifactId>myfaces-core-project</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.myfaces.core</groupId>
@@ -14,9 +13,9 @@
     </description>
     <url>http://myfaces.apache.org/core20/myfaces-api</url>
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/api</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/api</developerConnection>
-        <url>http://svn.apache.org/repos/asf/myfaces/core/trunk/api</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0</developerConnection>
+        <url>http://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0</url>
     </scm>
     <build>
 
