--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -14,9 +14,9 @@
   </description>
   <url>http://myfaces.apache.org/core20/myfaces-impl</url>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/impl</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/impl</developerConnection>
-    <url>http://svn.apache.org/repos/asf/myfaces/core/trunk/impl</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0</url>
   </scm>
   <build>
     <resources>
@@ -243,10 +243,8 @@
                 <phase>process-resources</phase>
                 <configuration>
                     <tasks>
-                        <copy todir="${project.build.directory}/tlddoc-facelets" flatten="true" overwrite="true" 
-                              verbose="true" failonerror="true">
-                            <fileset dir="${basedir}/src/main/conf/META-INF"  
-                                     includes="myfaces_facelet_fn.tld"/>
+                        <copy todir="${project.build.directory}/tlddoc-facelets" flatten="true" overwrite="true" verbose="true" failonerror="true">
+                            <fileset dir="${basedir}/src/main/conf/META-INF" includes="myfaces_facelet_fn.tld" />
                         </copy>
                     </tasks>
                 </configuration>
