--- a/implee6/pom.xml
+++ b/implee6/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>myfaces-core-project</artifactId>
     <groupId>org.apache.myfaces.core</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -15,9 +15,9 @@
   </description>
   <url>http://myfaces.apache.org/core20/myfaces-implee6</url>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/implee6</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk/implee6</developerConnection>
-    <url>http://svn.apache.org/repos/asf/myfaces/core/trunk/implee6</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/tags/2_0_0</url>
   </scm>
   
   <build>
