--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,16 @@
     This project is the home of the MyFaces implementation of the JavaServer Faces 2.0 specification, and
     consists of an API module (javax.faces.* classes) and an implementation module (org.apache.myfaces.* classes).
   </description>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
   <url>http://myfaces.apache.org/core20</url>
   <issueManagement>
     <system>jira</system>
     <url>http://issues.apache.org/jira/secure/BrowseProject.jspa?id=10600</url>
   </issueManagement>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/trunk</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/trunk</developerConnection>
-    <url>http://svn.apache.org/repos/asf/myfaces/trunk</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0</url>
   </scm>
   <modules>
     <!-- module>build</module -->
