Changed the version of myfaces-test20 to 1.0.0-SNAPSHOT to be able to use changes of myfaces-test20 in tests of myfaces core more quickly (after the next snapshot build of myfaces-test20)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@935721 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -910,7 +910,7 @@
     <dependency>
       <groupId>org.apache.myfaces.test</groupId>
       <artifactId>myfaces-test20</artifactId>
-      <version>1.0.0-beta</version>
+      <version>1.0.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
