--- a/api/pom.xml
+++ b/api/pom.xml
@@ -410,7 +410,7 @@
         <dependency>
             <groupId>org.apache.myfaces.test</groupId>
             <artifactId>myfaces-test20</artifactId>
-            <version>1.0.0-beta</version>
+            <version>1.0.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
