update to myfaces builder plugin 1.0.6-SNAPSHOT and myfaces builder annotations 1.0.5-SNAPSHOT
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@939861 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -179,7 +179,7 @@
             <plugin>
                 <groupId>org.apache.myfaces.buildtools</groupId>
                 <artifactId>myfaces-builder-plugin</artifactId>
-                <version>1.0.5</version>
+                <version>1.0.6-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <goals>
@@ -189,7 +189,8 @@
                     <execution>
                         <id>makecomp</id>
                         <configuration>
-                            <jsfVersion>12</jsfVersion>
+                            <jsfVersion>20</jsfVersion>
+                            <templateComponentName>componentClass20.vm</templateComponentName>
                         </configuration>
                         <goals>
                             <goal>make-components</goal>
@@ -391,7 +392,7 @@
         <dependency>
             <groupId>org.apache.myfaces.buildtools</groupId>
             <artifactId>myfaces-builder-annotations</artifactId>
-            <version>1.0.4</version>
+            <version>1.0.5-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
