add -Ddev=eclipse profile to prevent add implee6 sources on mvn eclipse:eclipse
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@939878 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -516,6 +516,39 @@
         </build>
     </profile>
     <profile>
+        <!-- USAGE: mvn eclipse:eclipse -Ddev=eclipse -->
+        <id>eclipse-with-unpacked-shared</id>
+        <activation>
+            <property>
+                <name>dev</name>
+                <value>eclipse</value>
+            </property>
+        </activation>
+        <build>
+          <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.0</version>
+                <executions>
+                  <execution>
+                    <id>add-source-shared</id>
+                    <phase>process-sources</phase>
+                    <goals>
+                      <goal>add-source</goal>
+                    </goals>
+                    <configuration>
+                      <sources>
+                        <source>${project.build.directory}/shared_sources</source>
+                      </sources>
+                    </configuration>
+                  </execution>
+                </executions>
+            </plugin>
+          </plugins>
+        </build>
+    </profile>
+    <profile>
       <!--
         - Whenever the full website is generated, the command
         -   mvn -Pgenerate-site -Pgenerate-tlddoc site
